<resources>
    <string name="app_name">Playground</string>
    <string name="button_toast_text">Custom Toast</string>
    <string name="snackbar">Snackbar</string>
    <string name="label_logout">Log Out</string>
    <string name="msg_logout">Do you want to logout from the app?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="msg_enter_details">Please Enter your Details</string>
    <string name="msg_hint_name">Enter Name</string>
    <string name="label_submit">Submit</string>
    <string name="label_simple_dialog">Simple Dialog</string>
    <string name="label_dialog_with_data">Dialog With Data</string>
    <string name="label_alert_dialog">Alert Dialog</string>
    <string name="btn_change_text_label">I can change text (0o0)/</string>
    <string name="stop_a_service">Stop a service</string>
    <string name="start_a_service">Start a service</string>
    <string name="notification_content">"Goodness, you gave me a fright, but I am luckily OK! (no thanks to you :P)"</string>
    <string name="channel_id">RogerWalters</string>
    <string name="channel_name">Pink</string>
    <string name="channel_description">band</string>
    <string name="notification_destination_text_view_label">Notification Brought you here!</string>
    <string name="did_you_here_a_notification">Did you here a notification?</string>
    <string name="activate_broadcast_receiver">Activate Broadcast Receiver</string>
    <string name="reply_notification_text">Reply Notification</string>
    <string name="content_provider_label">Fetch Contacts (Content Provider)</string>
    <string name="notification_id_key">notification_id</string>
    <string name="has_notification_id_key">has_notification_id</string>
    <string name="notification_key_reply">key_text_reply</string>
    <string name="start_job_service">Start Job Service</string>
    <string name="stop_job_service">Stop Job Service</string>
    <string name="intent_snack_key">snack_message_key</string>
    <string name="intent_filter_service_action_key">SERVICE_STARTED_ACTION</string>
    <string name="progress_notification">Show Progress Notification</string>
    <string name="fullscreen_notification">Fullscreen notification (like for a incoming call)</string>
    <string name="message_style_notification">Message style notification</string>
    <string name="data_store_update_value">Update a DataStore Value</string>
    <string name="optional_destination">OPTIONAL DESTINATION</string>
    <string name="nested_two">Nested Two</string>
    <string name="nested_three">Nested Three</string>
    <string name="navigate_to_sub_graph">Navigate to sub graph</string>
    <string name="navigate_to_optional_destination">Navigate to optional destination</string>
    <string name="next">Next</string>
    <string name="another_fragment">Another Fragment :)</string>
    <string name="go_to_nested_graph_via_global_action">Go to nested graph via Global action</string>
    <string name="nav_global_actions">Navigate to test Global Nav actions</string>
    <string name="main_test_text">I am a screen used to test logic with logcat output</string>
    <string name="hint_github_repo">GitHub Repository</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button_github">Search some Github Repositories</string>
    <string name="paging_in_action">Paging in Action</string>
    <string name="lbl_network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="notification_job_service">Notification Job Service</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="seconds_suffix">%1$d seconds</string>
    <!-- WorkManager related -->
    <!-- Titles -->
    <string name="blur_title">Select Blur Amount</string>

    <!-- Buttons -->
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>

    <!-- Content descriptions -->
    <string name="description_image">The image to blur and save.</string>

    <!-- Blur levels -->
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>

    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="image_blur_workmanager">Image Blur (WorkManager)</string>
    <string name="todo_aoo">TODO APP</string>

    <!-- TASK APP -->
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Todo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All Tasks</string>
    <string name="label_active">Active Tasks</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Task was deleted</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="no_data_description" />

    <!-- Content Descriptions -->
    <string name="tasks_header_image_content_description">Tasks header image</string>
    <string name="no_tasks_image_content_description">No tasks image</string>
</resources>