<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_start_job_service"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/start_job_service"
                    app:layout_constraintBottom_toTopOf="@id/btn_stop_job_service"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_stop_job_service"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/stop_job_service"
                    android:enabled="false"
                    app:layout_constraintBottom_toTopOf="@id/btn_content_provider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_content_provider"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/content_provider_label"
                    app:layout_constraintBottom_toTopOf="@id/btn_reply_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_reply_notification"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/reply_notification_text"
                    app:layout_constraintBottom_toTopOf="@id/btn_broadcast"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_broadcast"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/activate_broadcast_receiver"
                    app:layout_constraintBottom_toTopOf="@id/btn_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_notification"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/did_you_here_a_notification"
                    app:layout_constraintBottom_toTopOf="@id/btn_service_start"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_service_start"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/start_a_service"
                    app:layout_constraintBottom_toTopOf="@id/btn_service_stop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_service_stop"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/stop_a_service"
                    app:layout_constraintBottom_toTopOf="@id/btn_custom_dialog_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_custom_dialog_input"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/btn_change_text_label"
                    app:layout_constraintBottom_toTopOf="@id/btn_alert_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_alert_dialog"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/label_alert_dialog"
                    app:layout_constraintBottom_toTopOf="@id/btn_simple_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_simple_dialog"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/label_simple_dialog"
                    app:layout_constraintBottom_toTopOf="@id/btn_snackbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_snackbar"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/snackbar"
                    app:layout_constraintBottom_toTopOf="@id/btn_custom_toast"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_custom_toast"
                    android:layout_width="@dimen/wrap_constraints"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_12"
                    android:text="@string/button_toast_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</layout>