<?xml version="1.0" encoding="utf-8" ?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_network_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_network_type_required"
            style="@style/heading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <RadioGroup
            android:id="@+id/rg_network_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_4"
            android:checkedButton="@id/rb_none"
            app:layout_constraintTop_toBottomOf="@id/tv_network_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rb_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_marginLeft="@dimen/margin_8"
                android:text="@string/none"/>
            <RadioButton
                android:id="@+id/rb_any"
                android:text="@string/any"
                android:fontFamily="monospace"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb_wifi"
                android:text="@string/wifi"
                android:fontFamily="monospace"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_requires"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/requires"
            style="@style/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_network_type" />
        <Switch
            android:id="@+id/switch_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_idle"
            android:fontFamily="monospace"
            android:layout_marginLeft="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/tv_requires"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_charging"/>
        <Switch
            android:id="@+id/switch_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_charging"
            android:fontFamily="monospace"
            android:layout_marginLeft="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/tv_requires"
            app:layout_constraintStart_toEndOf="@id/switch_idle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline"
            style="@style/heading"
            app:layout_constraintTop_toBottomOf="@id/switch_idle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_deadline_value"/>
        <TextView
            android:id="@+id/tv_deadline_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Set"
            style="@style/heading"
            app:layout_constraintTop_toBottomOf="@id/switch_idle"
            app:layout_constraintStart_toEndOf="@id/tv_deadline"
            app:layout_constraintEnd_toEndOf="parent"/>
        <SeekBar
            android:id="@+id/sb_override_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/tv_deadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_schedule"
            android:text="@string/schedule_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@+id/sb_override_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"/>
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel_jobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@+id/sb_override_value"
            app:layout_constraintStart_toEndOf="@id/btn_schedule"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>