<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_image"
                android:scaleType="fitCenter"
                tools:src="@drawable/dinosaur_100"/>

            <TextView
                android:id="@+id/tv_filters_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <RadioGroup
                android:id="@+id/rg_blur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@id/rb_blur_lv_1">
                <RadioButton
                    android:id="@+id/rb_blur_lv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blur_lv_1"/>
                <RadioButton
                    android:id="@+id/rb_blur_lv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blur_lv_2"/>
                <RadioButton
                    android:id="@+id/rb_blur_lv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blur_lv_3"/>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_destinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_work"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <ProgressBar
                        android:id="@+id/pb_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:progress="0"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal"
                        tools:visibility="visible"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go"/>

                <Button
                    android:id="@+id/btn_see_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_file"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>