<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/wrap_constraints"
        android:layout_height="wrap_content"
        android:text="@string/label_logout"
        android:textSize="@dimen/title_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="@dimen/wrap_constraints"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/msg_logout"
        android:textSize="@dimen/subtitle_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/label_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"/>

    <Button
        android:id="@+id/btn_no"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/label_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_yes"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>